--- a/space_mission.html
+++ b/space_mission.html
@@ -9,7 +9,7 @@
 <title>Space Mission</title>
 
 <script type="text/bitsyGameData" id="exportedGameData">
-Space Mission
+*Space Mission*
 
 # BITSY VERSION 7.0
 
