--- a/space_mission.html
+++ b/space_mission.html
@@ -6,10 +6,10 @@
 
 <meta charset="UTF-8">
 
-<title>Space Mission</title>
+<title>Lost in Space</title>
 
 <script type="text/bitsyGameData" id="exportedGameData">
-Space Mission
+Lost in Space
 
 # BITSY VERSION 7.0
 
