Update and rename lost_in_space.html to space_mission.html

--- a/space_mission.html
+++ b/space_mission.html
@@ -6,10 +6,10 @@
 
 <meta charset="UTF-8">
 
-<title>Lost in Space</title>
+<title>Space Mission</title>
 
 <script type="text/bitsyGameData" id="exportedGameData">
-Lost in Space
+Space Mission
 
 # BITSY VERSION 7.0
 
